<resources>
    <string name="app_name">On Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_history">History</string>
    <string name="more_settings">More Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="avatar">avatar</string>
    <string name="edit">edit</string>
    <string name="favorite_bars">Favorite Bars</string>
    <string name="add_bar">Add Bar</string>
    <string name="add_drink">Add Drink</string>
    <string name="favorite_drinks">Favorite Drinks</string>
    <string name="friends_list">Friends List</string>
    <string name="add_friend">Add Friend</string>
    <string name="add_5">Add $5</string>
    <string name="account_balance">Account Balance</string>
    <string name="add_20">Add $20</string>
    <string name="add_10">Add $10</string>
    <string name="auto_add_funds">Auto Add Funds</string>
    <string name="transaction_history">Transaction History</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="select_place">Select Place</string>
    <string name="enter_message_to_send_to_with_drink">Enter Message to send to with Drink</string>
    <string name="send">Send</string>
    <string name="select_drink_recepiant">Select a Drink Recipient</string>
    <string name="enter_drink_amount">Enter a Drink Amount</string>
    <string name="back">Back</string>
    <string name="enter_an_amount">Enter an Amount</string>
    <string name="enter_a_message">Enter A Message</string>
    <string name="send_a_drink">Send A Drink</string>
    <string name="center_on_my_location">Center on my location</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip code</string>
    <string name="enter_restaurant_to_add">Enter Restaurant to add</string>
    <string name="search_for_restaurant_to_add">Search For Restaurant to add</string>
    <string name="enter_drink_description">Enter Drink Description</string>
    <string name="enter_drink_name">Enter Drink Name</string>
    <string name="button">Button</string>
    <string name="icon_for_restaurant">Icon for Restaurant</string>
    <string name="search_for_friends">Search For Friends</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="frist_name">Frist Name</string>
    <string name="address">Address</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are You Sure you want to</string>
    <string name="delete_this">delete this.</string>
    <string name="select_an_offer_to_redeem">Select An Offer To Redeem</string>
    <string name="redemption">Redemption</string>
    <string name="dollarsign">$</string>
    <string name="attached_message">Attached Message:</string>
    <string name="show_bartender_to_redeem">Show Bartender to Redeem</string>
    <string name="redeem_drink">Redeem Drink</string>
    <string name="would_like_you_to_join_them_for_a_drink">Would Like you to Join them for a Drink</string>
    <string name="logout">LogOut</string>

</resources>
