<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_redemption"
            android:icon="@drawable/ic_dollar_sign"
            android:title="@string/redemption" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/star"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/more_settings">
        <menu>
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/credit_card"
                android:title="@string/menu_credits" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/history"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/user"
                android:title="@string/menu_profile" />
        </menu>
    </item>

</menu>
