<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--Todo fix constraints maybe do linear or something -->
    <TextView
        android:id="@+id/text_account_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        />

    <TextView
        android:id="@+id/account_balance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_balance"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_account_balance"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/add_5_button"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/account_balance_text"
         />

    <Button
        android:id="@+id/add_10_button"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_5_button"
        />

    <Button
        android:id="@+id/add_20_button"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_20"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_10_button"
        />

    <Switch
        android:id="@+id/auto_add_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_add_funds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/add_20_button"
         />

    <TextView
        android:id="@+id/text_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@+id/auto_add_switch"
        />
</RelativeLayout>