<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedeemModal"
    android:background="@drawable/pop_gradient">
    <TextView
        android:id="@+id/sender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:textSize="18sp"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/senderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/sender"
        android:textSize="18sp"
        android:text="@string/would_like_you_to_join_them_for_a_drink"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/redemptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/sender"
        android:text="@string/show_bartender_to_redeem"
        android:textSize="24sp"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/resName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/redemptionTitle"
        android:textSize="22sp"
        android:textColor="#ffffff"
        />
    <LinearLayout
        android:id="@+id/dolarandamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resName"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/dollarsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollarsign"
            android:textSize="32sp"
            android:layout_marginLeft="100dp"
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:textColor="#ffffff"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/barcode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_border_clear_black_24dp"
        android:layout_below="@+id/dolarandamount"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attached_message"
        android:layout_below="@+id/barcode"
        android:id="@+id/messageTitle"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageTitle"
        android:id="@+id/messageText"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/redeemButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/messageText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/redeem_drink"
        android:textSize="18sp"
        />



</RelativeLayout>