<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:layout_centerHorizontal="true"
    android:background="@drawable/pop_gradient">

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:layout_marginTop="75dp"
        android:textColorHint="#A0A9B4"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/username_text"
        android:hint="@string/password"
        android:textColorHint="#A0A9B4"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/password_text"
        android:onClick="attemptLogIn"/>
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/password_text"
        android:layout_toRightOf="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:onClick="attemptLogIn"/>

    <TextView
        android:id="@+id/Results_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

</RelativeLayout>