<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/text_favorite_bars"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/favorite_bars"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
           />

        <Button
            android:id="@+id/add_favorite_bar_button"
            android:layout_width="107dp"
            android:layout_height="40dp"
            android:text="@string/add_bar"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="150dp"
           />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bar"
            android:layout_marginLeft="10dp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:text="Address">

        </TextView>
    </LinearLayout>
    <ListView
        android:id="@+id/favorite_bar_ListView"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_marginTop="10dp"

        >

    </ListView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_favorite_drinks"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/favorite_drinks"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
             />

        <Button
            android:id="@+id/add_favorite_drink_button"
            android:layout_width="107dp"
            android:layout_height="40dp"
            android:text="@string/add_drink"
            android:textSize="12sp"
            android:layout_marginLeft="150dp"
             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drink"
            android:layout_marginLeft="10dp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:text="Description">

        </TextView>
    </LinearLayout>
    <ListView
        android:id="@+id/favorite_drink_ListView"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        >

    </ListView>
    <TextView
        android:id="@+id/text_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

</LinearLayout>